@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.779 2008-10-28 16:49:33 tt Exp $
+# $Id: CHANGES,v 1.780 2008-10-28 18:42:03 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/10/28) Fixed bug# improved error logging of new postmaster tickets for
+    invalid priority names
  - (2008/10/28) Fixed bug# 3366 -TicketEvent ArticleFreeTextSet does not know
     ArticleID.
  - (2008/10/28) Fixed bug# 1491 - text in the file "UPGRADING" is misleading.
